[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Textures/PlayerSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/ArrowIndicator.png" type="Texture" id=2]
[ext_resource path="res://GameObjects/Entity/Player.gd" type="Script" id=3]
[ext_resource path="res://Components/SwipeController/SwipeController.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/ArrowIndicator.png-58a7b2e7f272b3fd0bd29de3853fec19.stex"

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 0
script = ExtResource( 3 )

[node name="HorizontalCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VerticalCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9

[node name="BehaviorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BehaviorArea"]
shape = SubResource( 3 )

[node name="Arrows" type="Node2D" parent="."]

[node name="UpArrow" type="Sprite" parent="Arrows"]
position = Vector2( 0, -12 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="RightArrow" type="Sprite" parent="Arrows"]
position = Vector2( 12, -9.53674e-07 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = SubResource( 4 )

[node name="DownArrow" type="Sprite" parent="Arrows"]
position = Vector2( -4.9738e-14, 12 )
rotation = 3.14159
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="LeftArrow" type="Sprite" parent="Arrows"]
position = Vector2( -12, -8.52651e-14 )
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="SwipeController" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
